--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -5,5 +5,10 @@
     "forgot_password": "Forgot password?",
     "saluber_welcome": "Welcome to SaluberMD!",
     "signup": "Sign up",
-    "dont_have_account": "Don't have an account?"
+    "dont_have_account": "Don't have an account?",
+    "getStarted": "Hello, let's get started!",
+    "email": "Email",
+    "registrationCode": "Registration code",
+    "alreadyHaveAccount": "Already have an account?",
+    "next": "Next"
 }
