--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -6,9 +6,11 @@
     "saluber_welcome": "Welcome to SaluberMD!",
     "signup": "Sign up",
     "dont_have_account": "Don't have an account?",
-    "getStarted": "Hello, let's get started!",
+    "ENG": "English",
+    "ITA": "Italian",
+    "get_started": "Hello, let's get started!",
     "email": "Email",
-    "registrationCode": "Registration code",
-    "alreadyHaveAccount": "Already have an account?",
+    "registration_code": "Registration code",
+    "already_have_account": "Already have an account?",
     "next": "Next"
 }
