Added modal for signup info

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -12,5 +12,7 @@
     "email": "Email",
     "registration_code": "Registration code",
     "already_have_account": "Already have an account?",
-    "next": "Next"
+    "next": "Next",
+    "find_reg_code" : "The registration code can be found by reaching out to the SaluberMD support team",
+    "info" : "Info"
 }
