--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -12,5 +12,7 @@
     "email": "E-mail",
     "registration_code": "Codice registrazione",
     "already_have_account": "Hai già un account?",
-    "next": "Prossimo"
+    "next": "Prossimo",
+    "find_reg_code" : "Il codice di registrazione può essere trovato contattando il team di supporto SaluberMD",
+    "info": "Informazioni"
 }
