Enhanced Modal component.

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -14,5 +14,6 @@
     "already_have_account": "Already have an account?",
     "next": "Next",
     "find_reg_code" : "The registration code can be found by reaching out to the SaluberMD support team",
-    "info" : "Info"
+    "info" : "Info",
+    "ok": "OK"
 }
