--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -14,5 +14,6 @@
     "already_have_account": "Hai già un account?",
     "next": "Prossimo",
     "find_reg_code" : "Il codice di registrazione può essere trovato contattando il team di supporto SaluberMD",
-    "info": "Informazioni"
+    "info": "Informazioni",
+    "ok": "OK"
 }
