--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -18,5 +18,7 @@
     "ok": "OK",
     "bad_credentials_description": "Siamo spiacenti, il tuo nome utente o la tua password non erano corretti. Ricontrolla le tue credenziali e riprova.",
     "invalid_reg_code": "Il codice inserito non è valido o è scaduto.",
-    "SERVER_ERROR" : "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza."
+    "SERVER_ERROR" : "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza.",
+    "online": "IN LINEA",
+    "offline": "DISCONNESSA"
 }
