--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -18,7 +18,9 @@
     "ok": "OK",
     "bad_credentials_description": "Siamo spiacenti, il tuo nome utente o la tua password non erano corretti. Ricontrolla le tue credenziali e riprova.",
     "invalid_reg_code": "Il codice inserito non è valido o è scaduto.",
-    "SERVER_ERROR" : "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza.",
+    "server_error" : "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza.",
     "online": "IN LINEA",
-    "offline": "DISCONNESSA"
+    "offline": "DISCONNESSA",
+    "home": "Home page",
+    "agenda": "Ordine"
 }
