Added terms page and privacy page within signup flow.

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -22,5 +22,9 @@
     "online": "ONLINE",
     "offline": "OFFLINE",
     "home": "Home",
-    "agenda":"Agenda"
+    "agenda":"Agenda",
+    "decline": "Decline",
+    "accept" : "I Accept",
+    "terms_conditions": "Terms and Conditions",
+    "privacy_policy": "Privacy Policy"
 }
