working on homepage

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -32,5 +32,23 @@
     "logout": "Logout",
     "enter_credentials": "Enter Your Credentials",
     "language": "Language",
-    "select": "Select"
+    "select": "Select",
+    "recent_visits": "Recent visits",
+    "see_all": "See all",
+    "completed": "Completed",
+    "draft": "Draft",
+    "no_recent_visits": "No recent visits",
+    "no_recent_visits_desc": "This is the place for the most recent visits. Looks a bit empty now, but don't worry, by time you will start seeing you recent visits here.",
+    "today_activities": "Today activities",
+    "no_available_slots": "No available slots",
+    "add_first_availability": "Add your first availability here",
+    "today": "Today",
+    "today_am": "Today AM",
+    "today_pm": "Today PM",
+    "slots": "Slots",
+    "no_slots": "No slots",
+    "appointments": "Appointments",
+    "no_appointments": "No appointments",
+    "scheduled_appointments": "Scheduled appointments",
+    "years_old": "years old"
 }
