Continued work on singup flow.

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -1,54 +1,75 @@
 {
-    "login": "Log in",
-    "username": "Username",
-    "password": "Password",
-    "forgot_password": "Forgot password?",
-    "saluber_welcome": "Welcome to SaluberMD!",
-    "signup": "Sign up",
-    "dont_have_account": "Don't have an account?",
-    "ENG": "English",
-    "ITA": "Italian",
-    "get_started": "Hello, let's get started!",
-    "email": "Email",
-    "registration_code": "Registration code",
-    "already_have_account": "Already have an account?",
-    "next": "Next",
-    "find_reg_code" : "The registration code can be found by reaching out to the SaluberMD support team",
-    "info" : "Info",
-    "ok": "OK",
-    "bad_credentials_description": "Sorry, your username or password was incorrect. Please double-check your credentials and try again.",
-    "invalid_reg_code": "The code inserted is not valid or has expired.",
-    "server_error" : "A server error has occurred. Please contact support for assistance.",
-    "online": "ONLINE",
-    "offline": "OFFLINE",
-    "home": "Home",
-    "agenda":"Agenda",
-    "decline": "Decline",
-    "accept" : "I Accept",
-    "terms_conditions": "Terms and Conditions",
-    "privacy_policy": "Privacy Policy",
-    "welcome_back": "Welcome Back",
-    "your_profile": "Your profile",
-    "logout": "Logout",
-    "enter_credentials": "Enter Your Credentials",
-    "language": "Language",
-    "select": "Select",
-    "recent_visits": "Recent visits",
-    "see_all": "See all",
-    "completed": "Completed",
-    "draft": "Draft",
-    "no_recent_visits": "No recent visits",
-    "no_recent_visits_desc": "This is the place for the most recent visits. Looks a bit empty now, but don't worry, by time you will start seeing you recent visits here.",
-    "today_activities": "Today activities",
-    "no_available_slots": "No available slots",
-    "add_first_availability": "Add your first availability here",
-    "today": "Today",
-    "today_am": "Today AM",
-    "today_pm": "Today PM",
-    "slots": "Slots",
-    "no_slots": "No slots",
-    "appointments": "Appointments",
-    "no_appointments": "No appointments",
-    "scheduled_appointments": "Scheduled appointments",
-    "years_old": "years old"
+  "login": "Log in",
+  "username": "Username",
+  "password": "Password",
+  "forgot_password": "Forgot password?",
+  "saluber_welcome": "Welcome to SaluberMD!",
+  "signup": "Sign up",
+  "dont_have_account": "Don't have an account?",
+  "ENG": "English",
+  "ITA": "Italian",
+  "get_started": "Hello, let's get started!",
+  "email": "Email",
+  "registration_code": "Registration code",
+  "already_have_account": "Already have an account?",
+  "next": "Next",
+  "find_reg_code": "The registration code can be found by reaching out to the SaluberMD support team",
+  "info": "Info",
+  "ok": "OK",
+  "bad_credentials_description": "Sorry, your username or password was incorrect. Please double-check your credentials and try again.",
+  "invalid_reg_code": "The code inserted is not valid or has expired.",
+  "server_error": "A server error has occurred. Please contact support for assistance.",
+  "online": "ONLINE",
+  "offline": "OFFLINE",
+  "home": "Home",
+  "agenda": "Agenda",
+  "decline": "Decline",
+  "accept": "I Accept",
+  "terms_conditions": "Terms and Conditions",
+  "privacy_policy": "Privacy Policy",
+  "welcome_back": "Welcome Back",
+  "your_profile": "Your profile",
+  "logout": "Logout",
+  "enter_credentials": "Enter Your Credentials",
+  "language": "Language",
+  "select": "Select",
+  "recent_visits": "Recent visits",
+  "see_all": "See all",
+  "completed": "Completed",
+  "draft": "Draft",
+  "no_recent_visits": "No recent visits",
+  "no_recent_visits_desc": "This is the place for the most recent visits. Looks a bit empty now, but don't worry, by time you will start seeing you recent visits here.",
+  "today_activities": "Today activities",
+  "no_available_slots": "No available slots",
+  "add_first_availability": "Add your first availability here",
+  "today": "Today",
+  "today_am": "Today AM",
+  "today_pm": "Today PM",
+  "slots": "Slots",
+  "no_slots": "No slots",
+  "appointments": "Appointments",
+  "no_appointments": "No appointments",
+  "scheduled_appointments": "Scheduled appointments",
+  "years_old": "years old",
+  "profile_info": "Enter your profile info",
+  "first_name": "First name",
+  "last_name": "Last name",
+  "birthday": "Birthday",
+  "gender": "Gender",
+  "office_address": "Office Address",
+  "country": "Country",
+  "city": "City",
+  "phone_number": "Phone number",
+  "specialty": "Specialty",
+  "medical_school": "Medical school",
+  "license_number": "License number",
+  "length_in_practise": "Length in practise",
+  "slot_duration": "Slot Duration",
+  "fee_per_visit": "Fee per visit",
+  "currency": "Currency",
+  "your_signature": "Your signature(Use for prescriptions)",
+  "submit": "Submit",
+  "back": "Back",
+  "clear": "Clear",
+  "save": "Save"
 }
