--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -1,36 +1,57 @@
 {
-    "login": "Log in",
-    "username": "Utente",
-    "password": "Password",
-    "forgot_password": "Ha dimenticato la password?",
-    "saluber_welcome": "Benvenuto a SaluberMD!",
-    "signup": "Iscrizione",
-    "dont_have_account": "Non hai un account?",
-    "ENG": "Inglese",
-    "ITA": "Italiano",
-    "get_started": "Ciao, cominciamo!",
-    "email": "E-mail",
-    "registration_code": "Codice registrazione",
-    "already_have_account": "Hai già un account?",
-    "next": "Prossimo",
-    "find_reg_code" : "Il codice di registrazione può essere trovato contattando il team di supporto SaluberMD",
-    "info": "Informazioni",
-    "ok": "OK",
-    "bad_credentials_description": "Siamo spiacenti, il tuo nome utente o la tua password non erano corretti. Ricontrolla le tue credenziali e riprova.",
-    "invalid_reg_code": "Il codice inserito non è valido o è scaduto.",
-    "server_error" : "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza.",
-    "online": "IN LINEA",
-    "offline": "DISCONNESSA",
-    "home": "Home page",
-    "agenda": "Ordine",
-    "decline": "Declino",
-    "accept" : "Accetto",
-    "terms_conditions": "Termini e Condizioni",
-    "privacy_policy": "Politica sulla riservatezza",
-    "welcome_back": "Bentornato",
-    "your_profile": "Il tuo profilo",
-    "logout": "Disconnettersi",
-    "enter_credentials": "Inserisci le tue credenziali",
-    "language": "Lingua",
-    "select": "Selezionare"
+  "login": "Log in",
+  "username": "Utente",
+  "password": "Password",
+  "forgot_password": "Ha dimenticato la password?",
+  "saluber_welcome": "Benvenuto a SaluberMD!",
+  "signup": "Iscrizione",
+  "dont_have_account": "Non hai un account?",
+  "ENG": "Inglese",
+  "ITA": "Italiano",
+  "get_started": "Ciao, cominciamo!",
+  "email": "E-mail",
+  "registration_code": "Codice registrazione",
+  "already_have_account": "Hai già un account?",
+  "next": "Prossimo",
+  "find_reg_code": "Il codice di registrazione può essere trovato contattando il team di supporto SaluberMD",
+  "info": "Informazioni",
+  "ok": "OK",
+  "bad_credentials_description": "Siamo spiacenti, il tuo nome utente o la tua password non erano corretti. Ricontrolla le tue credenziali e riprova.",
+  "invalid_reg_code": "Il codice inserito non è valido o è scaduto.",
+  "server_error": "Si è verificato un errore del server. Si prega di contattare il supporto per assistenza.",
+  "online": "IN LINEA",
+  "offline": "DISCONNESSA",
+  "home": "Home page",
+  "agenda": "Ordine",
+  "decline": "Declino",
+  "accept": "Accetto",
+  "terms_conditions": "Termini e Condizioni",
+  "privacy_policy": "Politica sulla riservatezza",
+  "welcome_back": "Bentornato",
+  "your_profile": "Il tuo profilo",
+  "logout": "Disconnettersi",
+  "enter_credentials": "Inserisci le tue credenziali",
+  "language": "Lingua",
+  "select": "Selezionare",
+  "profile_info": "Inserisci le informazioni del tuo profilo",
+  "first_name": "Nome",
+  "last_name": "Cognome",
+  "birthday": "Data di nascita",
+  "gender": "Genere",
+  "office_address": "Indirizzo dell'ufficio",
+  "country": "Paese",
+  "city": "Città",
+  "phone_number": "Numero di telefono",
+  "specialty": "Specialità",
+  "medical_school": "Scuola di medicina",
+  "license_number": "Numero di licenza",
+  "length_in_practise": "Anni di pratica",
+  "slot_duration": "Durata della slot",
+  "fee_per_visit": "Tariffa per visita",
+  "currency": "Valuta",
+  "your_signature": "La tua firma (Usa per le prescrizioni)",
+  "submit": "Invia",
+  "back": "Indietro",
+  "clear": "Chiara",
+  "save": "Salva"
 }
