added italian locales for homepage

--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -33,6 +33,24 @@
   "enter_credentials": "Inserisci le tue credenziali",
   "language": "Lingua",
   "select": "Selezionare",
+  "recent_visits": "Visite recenti",
+  "see_all": "Vedi tutto",
+  "completed": "Completato",
+  "draft": "Bozza",
+  "no_recent_visits": "Nessuna visita recente",
+  "no_recent_visits_desc": "Questo è il posto per le visite più recenti. Sembra un po' vuoto adesso, ma non preoccuparti, col tempo inizierai a vedere le tue visite recenti qui.",
+  "today_activities": "Attività di oggi",
+  "no_available_slots": "Nessuno slot disponibile",
+  "add_first_availability": "Aggiungi qui la tua prima disponibilità",
+  "today": "Oggi",
+  "today_am": "Oggi AM",
+  "today_pm": "Oggi PM",
+  "slots": "Slot",
+  "no_slots": "Niente slot",
+  "appointments": "Appuntamenti",
+  "no_appointments": "Nessun appuntamento",
+  "scheduled_appointments": "Appuntamenti programmati",
+  "years_old": "anni",
   "profile_info": "Inserisci le informazioni del tuo profilo",
   "first_name": "Nome",
   "last_name": "Cognome",
