--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -72,5 +72,13 @@
   "back": "Indietro",
   "clear": "Chiara",
   "save": "Salva",
-  "no_available_appointments": "Nessun appuntamento disponibile"
+  "no_available_appointments": "Nessun appuntamento disponibile",
+  "notifications": "Notifiche",
+  "at": "el",
+  "no_visits_1": "Questo è il posto per le visite più recenti, sembra un po' vuoto adesso, ma ",
+  "no_visits_2": "non preoccuparti, ",
+  "no_visits_3": "ecco alcuni suggerimenti ",
+  "no_visits_4": "su come usarli ;)",
+  "no_appointments_1": "Non hai ancora appuntamenti programmati, ",
+  "no_appointments_2": "su come creare il tuo primo appuntamento"
 }
