--- a/public/locales/it_IT.json
+++ b/public/locales/it_IT.json
@@ -80,5 +80,7 @@
   "no_visits_3": "ecco alcuni suggerimenti ",
   "no_visits_4": "su come usarli ;)",
   "no_appointments_1": "Non hai ancora appuntamenti programmati, ",
-  "no_appointments_2": "su come creare il tuo primo appuntamento"
+  "no_appointments_2": "su come creare il tuo primo appuntamento",
+  "patients": "Pazienti",
+  "contact_us": "Contattaci"
 }
