implemented contact us page

--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -82,5 +82,30 @@
   "no_appointments_1": "You have no scheduled appointments yet, ",
   "no_appointments_2": "on how to create your first appointment",
   "patients": "Patients",
-  "contact_us": "Contact us"
+  "contact_us": "Contact us",
+  "about_us": "About us",
+  "privacy": "Privacy",
+  "about_salubermd": "About SaluberMD",
+  "about_salubermd_part1": "After watching this industry evolve over the last twenty years, we have created SaluberMD to offer an affordable, convenient solution for patients to manage their health from anywhere. The challenge of servicing patients remotely is not a new concept, but with the evolution of technology, the dream of better health outcomes is now within reach.",
+  "founding_principles": "Founding Principles",
+  "about_salubermd_part2": "We observed that patients had no control over their medical records, scheduling doctors' appointments and how much time was spent with their doctor. This drove us to founding principles of SaluberMD:",
+  "principle1": "To keep the patient at the center of everything we do",
+  "principle2": "SaluberMD trained doctors will provide an experience that is (almost) as good as being there in person",
+  "principle3": "Promote a unified approatch to health, wellness and disease management, accessible via mobile devices and desktop",
+  "principle4": "Build a truly global organization with access to care anywhere, anytime",
+  "principle5": "Be a purpose-driven organization through our 'Global Care Program'. SaluberMD doctors will be encouraged to donate hours to help those without accessible or affordable medical care",
+  "privacy_policy_part1": "NOTICE OF HEALTH INFORMATION PRIVACY PRACTICES",
+  "privacy_policy_part2": "Notice of Health Information Privacy Practices (for SaluberMD, LLC last revised December 7, 2017).",
+  "privacy_policy_part3": "This section of our Privacy Policy (Section I, 'Notice of Health Information Privacy Practices' or 'Notice') describes how health information about you may be used and disclosed and how you can get access to this information. Please review it carefully.",
+  "privacy_policy_part4": "HOW IS PATIENT PRIVACY PROTECTED?",
+  "privacy_policy_part5": "As the healthcare professionals providing online medical services through SaluberMD (the “Healthcare Professionals”, “us”, “we”, “our”), we understand that information about you and your health is personal. Because of this, we strive to maintain the confidentiality of your health information. We continuously seek to safeguard that information through administrative, physical and technical means, and otherwise abide by applicable federal and state guidelines.",
+  "privacy_policy_part6": "HOW DO WE USE AND DISCLOSE HEALTH INFORMATION?",
+  "privacy_policy_part7": "We use and disclose your health information for the normal business activities that the law sees as falling in the categories of treatment, payment and healthcare operations. Below we provide examples of those activities, although not every use or disclosure falling within each category is listed:",
+  "privacy_policy_part8": "– Treatment – We keep a record of the health information you provide us. This record may include your test results, diagnoses, medications, your response to medications or other therapies, and information we learn about your medical condition through the online Services. We may disclose this information so that other doctors, nurses, and entities such as laboratories can meet your healthcare needs.",
+  "submit_ticket": "Submit a ticket",
+  "ticket_desc": "If you would like to learn more about our services, please react out to us using the contact information below.",
+  "subject": "Subject",
+  "title": "Title",
+  "category": "Category",
+  "description": "Description"
 }
