--- a/public/locales/en_US.json
+++ b/public/locales/en_US.json
@@ -107,5 +107,7 @@
   "subject": "Subject",
   "title": "Title",
   "category": "Category",
-  "description": "Description"
+  "description": "Description",
+  "welcome_tips": "Welcome tips",
+  "welcome_tips_desc": "This is the place for the most recent visits, as soon as you finish with one videocall, you will be able to preview it in this section. On image you can see a little introduction on how it will look like."
 }
